--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
     "mern"
   ],
   "author": "joehinmoro",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ejs": "^3.1.7",
+    "express": "^4.17.3",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.3.1"
+  }
 }
